--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-plotly==5.10.0
-evidently==0.1.58.dev0
-mlflow==1.29.0
-kaleido==0.2.1
+plotly==5.18.0 
+evidently==0.2.8
+mlflow==2.9.2
+python-kaleido==0.2.1
